@@ -7,6 +7,7 @@ v4.1.11 (2017-03-xx)
 * extracted VelocyPack implementation to https://github.com/arangodb/java-velocypack
 * added dependency java-velocypack-module-jdk8
 * added support for replacing build-in VelocyPack serializer/deserializer
+* added ArangoDatabaseAsync.getVersion(), ArangoDatabaseAsync.getAccessibleDatabases()
 
 v4.1.10 (2017-02-22)
 ---------------------------
